--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ polars==1.13.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
 six==1.16.0
+SQLAlchemy==2.0.36
+typing_extensions==4.12.2
 tzdata==2024.2
